[remoting host] Initialize mojo unconditionally

Mojo needs to be initialized, even in a single-process context, to fix
a crash on startup. This CL removes the condition on
remoting_multi_process for calling mojo::core::Init().

Bug: 875462
Change-Id: I021e5248aae850962c4ef53a506a2d06413aaf77
Reviewed-on: https://chromium-review.googlesource.com/1180499
Commit-Queue: Lambros Lambrou <lambroslambrou@chromium.org>
Reviewed-by: Joe Downing <joedow@chromium.org>
Cr-Commit-Position: refs/heads/master@{#584250}
Former-commit-id: bfbe0350e78bc0da082faba02047b6eae3278aac