remoting/host/host_main.cc
@@ -19,6 +19,7 @@
 #include "base/strings/stringprintf.h"
 #include "base/strings/utf_string_conversions.h"
 #include "build/build_config.h"
+#include "mojo/core/embedder/embedder.h"
 #include "remoting/base/breakpad.h"
 #include "remoting/host/evaluate_capability.h"
 #include "remoting/host/host_exit_codes.h"
@@ -27,10 +28,6 @@
 #include "remoting/host/setup/me2me_native_messaging_host.h"
 #include "remoting/host/switches.h"
 #include "remoting/host/usage_stats_consent.h"
-
-#if defined(REMOTING_MULTI_PROCESS)
-#include "mojo/core/embedder/embedder.h"
-#endif  // defined(REMOTING_MULTI_PROCESS)
 
 #if defined(OS_MACOSX)
 #include "base/mac/scoped_nsautorelease_pool.h"
@@ -225,9 +222,7 @@ int HostMain(int argc, char** argv) {
 
   remoting::LoadResources("");
 
-#if defined(REMOTING_MULTI_PROCESS)
   mojo::core::Init();
-#endif
 
   // Invoke the entry point.
   int exit_code = main_routine();
